--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-merlot
+#about/contact
+author:
+  name:              Amartyo-Roy
+  email:             amartyo09@gmail.com
+  url:               https://amartyoroy.github.io/SEnotes
