added title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-merlot
+title:               'Amartyo Roy'
+description:         'Some Notes I made for the Software Engineering External Exams'
 #about/contact
 author:
   name:              Amartyo-Roy
